[gd_scene load_steps=8 format=3 uid="uid://c461twdyy4o7j"]

[ext_resource type="Script" uid="uid://dbu177lni5orx" path="res://scripts/cat.gd" id="1_se5fe"]
[ext_resource type="Texture2D" uid="uid://db1r58o0k3n5e" path="res://assets/sprites/cat_2.png" id="2_t8pth"]
[ext_resource type="Texture2D" uid="uid://dhm0ulignai44" path="res://assets/sprites/cat_eat_rat.png" id="3_7vi38"]
[ext_resource type="AudioStream" uid="uid://d063kj5crrfgg" path="res://assets/sounds/cat/cat_hungry.wav" id="3_t8pth"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myi5k"]
size = Vector2(16, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vi38"]
bg_color = Color(0, 0, 0, 0.196078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8pth"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Cat" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_se5fe")

[node name="Sprite1" type="Sprite2D" parent="."]
texture = ExtResource("2_t8pth")

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_7vi38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_myi5k")

[node name="CatVoice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t8pth")
volume_db = -35.0
bus = &"SFX"

[node name="Button" type="Button" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/hover = SubResource("StyleBoxFlat_7vi38")
theme_override_styles/normal = SubResource("StyleBoxFlat_t8pth")
metadata/_edit_use_anchors_ = true

[node name="ProgressBarArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -9.0
offset_top = -8.0
offset_right = 7.0
offset_bottom = -6.0
rotation = -1.5708

[node name="ProgressBar" type="ColorRect" parent="ProgressBarArea"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = -1.0
anchor_top = -1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HungerTimer" type="Timer" parent="."]
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 2.0
target_desired_distance = 2.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
